opinionated Offsets class